--- a/app/src/main/res/layout/sceyt_item_out_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_deleted_message.xml
@@ -1,85 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="4dp">
 
-    <data>
-
-        <variable
-            name="message"
-            type="com.sceyt.chat.ui.data.models.messages.SceytMessage" />
-    </data>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutDetails"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="4dp">
+        android:layout_gravity="end"
+        android:background="@drawable/sceyt_bg_out_message">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/messageDay"
+            android:id="@+id/messageBody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             android:layout_marginVertical="8dp"
-            android:background="@drawable/sceyt_bg_message_day"
-            android:includeFontPadding="false"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="4dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/message_was_deleted"
             android:textColor="@color/sceyt_color_gray_400"
-            android:textSize="@dimen/extraSmallTextSize"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="@dimen/mediumTextSize"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+            app:layout_constraintEnd_toStartOf="@+id/messageDate"
+            app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            bind:visibleIf="@{message.showDate}"
-            tools:text="Feb 24" />
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layoutDetails"
+        <com.sceyt.chat.ui.presentation.customviews.SceytDateStatusView
+            android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/messageDay"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/sceyt_bg_out_message">
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="2dp"
+            android:includeFontPadding="false"
+            app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
+            app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+            app:sceytDateStatusViewDateTextColor="#7C7E8E"
+            app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
+            app:sceytDateStatusViewFirstStatus="false"
+            app:sceytDateStatusViewStatusIconMargin="5dp"
+            app:sceytDateStatusViewStatusIconSize="16dp"
+            tools:sceytDateStatusViewDateText="00:37" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/messageBody"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="10dp"
-                android:text="@string/message_was_deleted"
-                android:textColor="@color/sceyt_color_gray_400"
-                android:textSize="@dimen/mediumTextSize"
-                android:textStyle="italic"
-                app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
-                app:layout_constraintEnd_toStartOf="@+id/messageDate"
-                app:layout_constraintStart_toStartOf="@+id/layoutDetails"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.sceyt.chat.ui.presentation.customviews.SceytDateStatusView
-                android:id="@+id/messageDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="2dp"
-                android:includeFontPadding="false"
-                app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
-                app:layout_constraintEnd_toEndOf="@id/layoutDetails"
-                app:sceytDateStatusViewDateTextColor="#7C7E8E"
-                app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
-                app:sceytDateStatusViewFirstStatus="false"
-                app:sceytDateStatusViewStatusIconMargin="5dp"
-                app:sceytDateStatusViewStatusIconSize="16dp"
-                tools:sceytDateStatusViewDateText="00:37" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </RelativeLayout>
-</layout>
+</FrameLayout>
