--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -1,37 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:bind="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <data>
+
+        <import type="com.sceyt.chat.ui.R" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_bg"
-        app:elevation="0dp">
+        android:layout_height="match_parent">
 
-        <com.sceyt.chat.ui.presentation.uicomponents.searchinput.SearchInputView
-            android:id="@+id/searchView"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutToolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:sceytUiHintTextColor="@color/sceyt_color_hint"
-            app:sceytUiSearchIcon="@drawable/sceyt_ic_search"
-            app:sceytUiTextColor="@color/sceyt_color_black_themed" />
+            android:layout_height="?actionBarSize"
+            android:paddingHorizontal="16dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/channels"
+                android:textColor="@color/sceyt_color_text_themed"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                bind:themedTextColor="@{R.color.sceyt_color_black_themed}" />
 
-    <com.sceyt.chat.ui.presentation.uicomponents.channels.ChannelsListView
-        android:id="@+id/channelListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingHorizontal="10dp"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        app:sceytUiChannelTitleTextSize="@dimen/_50sdp"
-        app:sceytUiUnreadMessageCounterTextColor="@color/sceyt_color_green" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <View
+            android:id="@+id/underline"
+            android:layout_width="match_parent"
+            android:layout_height=".5dp"
+            android:background="@color/sceyt_color_divider"
+            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar"
+            bind:themedBackgroundColor="@{R.color.sceyt_color_divider}" />
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/underline">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/sceyt_color_bg"
+                app:elevation="0dp">
+
+                <com.sceyt.chat.ui.presentation.uicomponents.searchinput.SearchInputView
+                    android:id="@+id/searchView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_scrollFlags="scroll|enterAlways|snap"
+                    app:sceytUiHintTextColor="@color/sceyt_color_hint"
+                    app:sceytUiSearchIcon="@drawable/sceyt_ic_search"
+                    app:sceytUiTextColor="@color/sceyt_color_black_themed" />
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <com.sceyt.chat.ui.presentation.uicomponents.channels.ChannelsListView
+                android:id="@+id/channelListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingHorizontal="10dp"
+                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                app:sceytUiChannelTitleTextSize="@dimen/_50sdp"
+                app:sceytUiUnreadMessageCounterTextColor="@color/sceyt_color_green" />
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
