--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,13 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <data>
+
+        <import type="com.sceyt.chat.ui.R" />
+
+        <variable
+            name="isSaveLoading"
+            type="Boolean" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Profile  todo"
-        android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="29sp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:paddingHorizontal="15dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/my_profile"
+                android:textColor="@color/sceyt_color_text_themed"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                bind:themedTextColor="@{R.color.sceyt_color_black_themed}" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvEditOrSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?selectableItemBackgroundBorderless"
+                android:padding="5dp"
+                android:text="@string/sceyt_edit"
+                android:textColor="@color/sceyt_color_accent"
+                android:textSize="@dimen/mediumTextSize"
+                app:layout_constraintBottom_toBottomOf="@+id/title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/title"
+                bind:visibleIf="@{!isSaveLoading}" />
+
+            <ProgressBar
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:padding="4dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/title"
+                app:srcCompat="@drawable/checked"
+                bind:visibleIf="@{isSaveLoading}" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/underline"
+            android:layout_width="match_parent"
+            android:layout_height=".5dp"
+            android:background="@color/sceyt_color_divider"
+            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar"
+            bind:themedBackgroundColor="@{R.color.sceyt_color_divider}" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/underline">
+
+            <com.sceyt.chat.ui.presentation.customviews.SceytAvatarView
+                android:id="@+id/avatar"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:sceytAvatarViewTextSize="@dimen/extraLargeTextSize"
+                tools:sceytAvatarViewFullName="User name" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/icEditPhoto"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:background="@drawable/sceyt_bg_circle"
+                android:backgroundTint="#60E3E7FF"
+                android:scaleType="centerInside"
+                app:layout_constraintBottom_toBottomOf="@+id/avatar"
+                app:layout_constraintEnd_toEndOf="@+id/avatar"
+                app:layout_constraintStart_toStartOf="@id/avatar"
+                app:layout_constraintTop_toTopOf="@id/avatar"
+                app:srcCompat="@drawable/sceyt_ic_pick_photo" />
+
+            <ProgressBar
+                android:id="@+id/loadingProfileImage"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/avatar"
+                app:layout_constraintEnd_toEndOf="@+id/avatar"
+                app:layout_constraintStart_toStartOf="@+id/avatar"
+                app:layout_constraintTop_toTopOf="@+id/avatar" />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/displayName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/roboto_medium"
+                android:hint="@string/display_name"
+                android:inputType="textPersonName"
+                android:maxLines="2"
+                android:textColor="@color/sceyt_color_text_themed"
+                android:textColorHint="@color/sceyt_color_hint"
+                android:textSize="@dimen/bigTextSize"
+                app:layout_constraintBottom_toBottomOf="@+id/avatar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/avatar"
+                app:layout_constraintTop_toTopOf="@+id/avatar"
+                bind:themedTextColor="@{R.color.sceyt_color_black_themed}" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchNotifications"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/sceyt_bg_top_bottom_lines"
+                android:backgroundTint="@color/sceyt_color_divider"
+                android:checked="true"
+                android:drawablePadding="18dp"
+                android:text="@string/notifications"
+                android:textColor="@color/sceyt_color_text_themed"
+                android:textSize="@dimen/mediumTextSize"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/avatar"
+                bind:themedBackgroundTintColor="@{R.color.sceyt_color_divider}"
+                bind:themedTextColor="@{R.color.sceyt_color_text_themed}" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchTheme"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/sceyt_dark_theme"
+                android:textColor="@color/sceyt_color_black_themed"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/switchNotifications"
+                bind:themedTextColor="@{R.color.sceyt_color_black_themed}" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height=".5dp"
+                android:background="@color/sceyt_color_divider"
+                app:layout_constraintTop_toBottomOf="@+id/switchTheme"
+                bind:themedBackgroundColor="@{R.color.sceyt_color_divider}" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/sign_out"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/sign_out"
+                android:textColor="@color/sceyt_color_red"
+                android:textSize="@dimen/mediumTextSize"
+                app:layout_constraintStart_toStartOf="@id/switchNotifications"
+                app:layout_constraintTop_toBottomOf="@id/switchTheme" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
