--- a/app/src/main/res/menu/sceyt_menu_popup_message.xml
+++ b/app/src/main/res/menu/sceyt_menu_popup_message.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/sceyt_edit_message"
-        android:icon="@drawable/sceyt_ic_edit"
+        android:icon="@drawable/sceyt_ic_edit_stroked"
         android:title="@string/editing_message"
         app:showAsAction="always" />
 
