--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,6 +26,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
+                themedTextColor="@{R.color.sceyt_color_black_themed}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/my_profile"
@@ -34,11 +35,11 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                bind:themedTextColor="@{R.color.sceyt_color_black_themed}" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvEditOrSave"
+                visibleIf="@{!isSaveLoading}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="?selectableItemBackgroundBorderless"
@@ -48,10 +49,10 @@
                 android:textSize="@dimen/mediumTextSize"
                 app:layout_constraintBottom_toBottomOf="@+id/title"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/title"
-                bind:visibleIf="@{!isSaveLoading}" />
+                app:layout_constraintTop_toTopOf="@+id/title" />
 
             <ProgressBar
+                visibleIf="@{isSaveLoading}"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:padding="4dp"
@@ -59,18 +60,17 @@
                 app:layout_constraintBottom_toBottomOf="@+id/title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/title"
-                app:srcCompat="@drawable/checked"
-                bind:visibleIf="@{isSaveLoading}" />
+                app:srcCompat="@drawable/checked" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/underline"
+            themedBackgroundColor="@{R.color.sceyt_color_divider}"
             android:layout_width="match_parent"
             android:layout_height=".5dp"
             android:background="@color/sceyt_color_divider"
-            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar"
-            bind:themedBackgroundColor="@{R.color.sceyt_color_divider}" />
+            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -114,6 +114,7 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/displayName"
+                themedTextColor="@{R.color.sceyt_color_black_themed}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
@@ -128,11 +129,12 @@
                 app:layout_constraintBottom_toBottomOf="@+id/avatar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/avatar"
-                app:layout_constraintTop_toTopOf="@+id/avatar"
-                bind:themedTextColor="@{R.color.sceyt_color_black_themed}" />
+                app:layout_constraintTop_toTopOf="@+id/avatar" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchNotifications"
+                themedBackgroundTintColor="@{R.color.sceyt_color_divider}"
+                themedTextColor="@{R.color.sceyt_color_text_themed}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -145,12 +147,11 @@
                 android:textSize="@dimen/mediumTextSize"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/avatar"
-                bind:themedBackgroundTintColor="@{R.color.sceyt_color_divider}"
-                bind:themedTextColor="@{R.color.sceyt_color_text_themed}" />
+                app:layout_constraintTop_toBottomOf="@id/avatar" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchTheme"
+                themedTextColor="@{R.color.sceyt_color_black_themed}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
@@ -158,15 +159,14 @@
                 android:textColor="@color/sceyt_color_black_themed"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/switchNotifications"
-                bind:themedTextColor="@{R.color.sceyt_color_black_themed}" />
+                app:layout_constraintTop_toBottomOf="@+id/switchNotifications" />
 
             <View
+                themedBackgroundColor="@{R.color.sceyt_color_divider}"
                 android:layout_width="match_parent"
                 android:layout_height=".5dp"
                 android:background="@color/sceyt_color_divider"
-                app:layout_constraintTop_toBottomOf="@+id/switchTheme"
-                bind:themedBackgroundColor="@{R.color.sceyt_color_divider}" />
+                app:layout_constraintTop_toBottomOf="@+id/switchTheme" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/sign_out"
