--- a/app/src/main/res/layout/sceyt_item_channel.xml
+++ b/app/src/main/res/layout/sceyt_item_channel.xml
@@ -26,14 +26,14 @@
 
         <View
             android:id="@+id/onlineStatusBg"
+            themedBackgroundTintColor="@{R.color.sceyt_color_bg}"
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:layout_margin="1dp"
             android:background="@drawable/sceyt_bg_circle"
             android:backgroundTint="@color/sceyt_color_bg"
             app:layout_constraintBottom_toBottomOf="@id/avatar"
-            app:layout_constraintEnd_toEndOf="@id/avatar"
-            bind:themedBackgroundTintColor="@{R.color.sceyt_color_bg}" />
+            app:layout_constraintEnd_toEndOf="@id/avatar" />
 
         <View
             android:id="@+id/onlineStatus"
@@ -57,6 +57,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/channelTitle"
+            themedTextColor="@{R.color.sceyt_color_text_themed}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
@@ -73,7 +74,6 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@+id/avatar"
             app:layout_constraintTop_toTopOf="@id/avatar"
-            bind:themedTextColor="@{R.color.sceyt_color_text_themed}"
             tools:text="Title" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -92,13 +92,13 @@
             tools:text="Description" />
 
         <View
+            themedBackgroundColor="@{R.color.sceyt_color_divider}"
             android:layout_width="0dp"
             android:layout_height="0.5dp"
             android:background="@color/sceyt_color_divider"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/channelTitle"
-            bind:themedBackgroundColor="@{R.color.sceyt_color_divider}" />
+            app:layout_constraintStart_toStartOf="@id/channelTitle" />
 
         <com.sceyt.chat.ui.presentation.customviews.SceytDateStatusView
             android:id="@+id/updateDate"
