Was fixed UI bugs to upload and download files in conversation page.

--- a/app/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -39,13 +39,14 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="5dp"
             android:singleLine="true"
             android:textColor="@color/sceyt_color_accent"
             android:textSize="@dimen/extraSmallTextSize"
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
@@ -77,6 +78,7 @@
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReplay"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
