--- a/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
@@ -28,7 +28,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
@@ -40,6 +40,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Henry Willian" />
 
         <androidx.appcompat.widget.AppCompatTextView
