Was created functionality to edit channel info. Creating functionality ConversationInfoActivity.kt is in progress.

--- a/app/src/main/res/values/sceyt_attrs_online_view.xml
+++ b/app/src/main/res/values/sceyt_attrs_online_view.xml
@@ -4,6 +4,7 @@
     <declare-styleable name="SceytOnlineView">
         <attr name="sceytOnlineViewStrokeColor" format="reference|color" />
         <attr name="sceytOnlineViewIndicatorColor" format="reference|color" />
-        <attr name="sceytOnlineViewStrokeWidth" format="dimension|integer" />
+        <attr name="sceytOnlineViewStrokeWidth" format="dimension" />
+        <attr name="sceytOnlineViewChangeVisibilityWithAnim" format="boolean" />
     </declare-styleable>
 </resources>
