--- a/app/src/main/res/layout/item_channel_member.xml
+++ b/app/src/main/res/layout/item_channel_member.xml
@@ -1,32 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="8dp">
 
-    <!--<androidx.appcompat.widget.AppCompatTextView
+    <com.sceyt.chat.ui.presentation.customviews.SceytAvatarView
+        android:id="@+id/avatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:sceytAvatarViewFullName="Art d"
+        app:sceytAvatarViewTextSize="16dp" />
+
+    <com.sceyt.chat.ui.presentation.customviews.SceytOnlineView
+        android:id="@+id/onlineStatus"
+        android:layout_width="11dp"
+        android:layout_height="11dp"
+        android:layout_marginEnd="1dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/avatar"
+        app:sceytOnlineViewIndicatorColor="@color/sceyt_color_green"
+        app:sceytOnlineViewStrokeColor="@color/sceyt_color_bg"
+        app:sceytOnlineViewStrokeWidth="1dp"
+        tools:visibility="visible" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/memberName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="10dp"
         android:ellipsize="end"
         android:lines="1"
-        android:textSize="@dimen/mediumTextSize" />
+        android:text="Anna"
+        android:textColor="@color/sceyt_color_text_themed"
+        android:textSize="@dimen/mediumTextSize"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/roleName"
+        app:layout_constraintStart_toEndOf="@+id/avatar"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/roleName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="9.5dp"
         android:ellipsize="end"
         android:gravity="end"
         android:lines="1"
+        android:text="Owner"
+        android:textColor="@color/sceyt_color_gray_400"
         android:textSize="@dimen/smallTextSize"
         app:layout_constraintBottom_toBottomOf="@id/memberName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/memberName"
+        app:layout_constraintEnd_toStartOf="@+id/icDots"
         app:layout_constraintTop_toTopOf="@id/memberName" />
--->
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/icDots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:paddingHorizontal="13dp"
+        android:paddingVertical="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/sceyt_ic_more_dots" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
