--- a/app/src/main/res/layout/sceyt_item_channel.xml
+++ b/app/src/main/res/layout/sceyt_item_channel.xml
@@ -18,7 +18,6 @@
             android:layout_width="@dimen/_42sdp"
             android:layout_height="@dimen/_42sdp"
             android:layout_marginVertical="8dp"
-            app:cardBackgroundColor="@color/sceyt_color_green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,11 +28,13 @@
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:layout_margin="1dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/avatar"
             app:layout_constraintEnd_toEndOf="@id/avatar"
             app:sceytOnlineViewIndicatorColor="@color/sceyt_color_green"
             app:sceytOnlineViewStrokeColor="@color/sceyt_color_bg"
-            app:sceytOnlineViewStrokeWidth="1.5dp" />
+            app:sceytOnlineViewStrokeWidth="1.5dp"
+            tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/channelTitle"
