--- a/app/src/main/res/values/sceyt_arrays.xml
+++ b/app/src/main/res/values/sceyt_arrays.xml
@@ -3,7 +3,7 @@
     <integer-array name="file_picker">
         <item>@string/take_photo</item>
         <item>@string/upload_from_gallery</item>
-        <item>@string/delete</item>
+        <item>@string/sceyt_delete</item>
     </integer-array>
 
     <integer-array name="image_picker">
