Creating functionality ConversationInfoActivity.kt is in progress. Created functionality and UI in the channel members section. Functionality to Sync updates is in process.

--- a/app/src/main/res/layout/fragment_channel_members.xml
+++ b/app/src/main/res/layout/fragment_channel_members.xml
@@ -28,6 +28,7 @@
         android:id="@+id/rvMembers"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:layout_constraintBottom_toBottomOf="parent"
