Creating functionality ConversationInfoActivity.kt is in progress. Was created functionality and UI from edit members(Kick, Block, Change role, Set owner).
Was created functionality to live update changes connected with members in the ChannelMembersFragment.kt (Kicked, Blocked, Changed role, Set owner)..

Was created functionality to show downloading progress in ChannelMediaFragment.kt page and ChannelFilesFragment.kt page.

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -59,7 +59,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/title"
-                app:srcCompat="@drawable/checked" />
+                app:srcCompat="@drawable/sceyt_radio_button_checked_state" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
