--- a/app/src/main/res/drawable/sceyt_custom_radiobutton.xml
+++ b/app/src/main/res/drawable/sceyt_custom_radiobutton.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_checked="true"
-        android:drawable="@drawable/checked" />
+        android:drawable="@drawable/sceyt_radio_button_checked_state" />
     <item android:state_pressed="true"
-        android:drawable="@drawable/checked" />
+        android:drawable="@drawable/sceyt_radio_button_pressed_state" />
     <item android:state_pressed="false"
-        android:drawable="@drawable/unchecked" />
+        android:drawable="@drawable/sceyt_radio_button_unchecked_state" />
 </selector>
