--- a/app/src/main/res/layout/fragment_channel_files.xml
+++ b/app/src/main/res/layout/fragment_channel_files.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rvFiles"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingTop="15dp"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    app:spanCount="3"
-    tools:itemCount="9"
-    tools:listitem="@layout/item_channel_file" />
+    android:paddingTop="15dp">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFiles"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:spanCount="3"
+        tools:itemCount="9"
+        tools:listitem="@layout/item_channel_file" />
+</FrameLayout>
