--- a/app/src/main/res/layout/fragment_channel_media.xml
+++ b/app/src/main/res/layout/fragment_channel_media.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
+        android:paddingHorizontal="2dp"
         android:paddingTop="15dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="3"
