--- a/app/src/main/res/layout/item_channel_video.xml
+++ b/app/src/main/res/layout/item_channel_video.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/parentLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="1dp">
+    android:layout_margin="1dp"
+    android:background="@drawable/sceyt_bg_corners_6"
+    android:backgroundTint="@color/sceyt_color_gray">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/icImage"
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/videoView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerSize6"
-        app:srcCompat="@color/sceyt_color_gray"/>
+        app:resize_mode="zoom"
+        app:surface_type="texture_view"
+        app:use_controller="false" />
+
+    <com.sceyt.chat.ui.presentation.customviews.SceytVideoControllerView
+        android:id="@+id/videoViewController"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:sceytVideoControllerPlayPauseSize="40dp" />
 
     <View
         android:id="@+id/viewBg"
