--- a/app/src/main/res/layout/sceyt_search_view.xml
+++ b/app/src/main/res/layout/sceyt_search_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -31,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:hint="@string/search"
+            android:hint="@string/search_for_channels"
             android:imeOptions="actionSearch"
             android:includeFontPadding="false"
             android:inputType="text"
